@@ -23,14 +23,8 @@ sub handler {
     }
     elsif ($test eq 'upload') {
         my ($upload) = values %{$req->upload};
-#        unlink("/home/joe/tmp/foo");
-        my $bb = $upload->bb;
-        while (my $b = $bb->first) {
-            $b->read(my $buffer);
-            $r->print($buffer);
-            $b->remove;
-        }
-#        $upload->link("/home/joe/tmp/foo");
+        $upload->slurp(my $data);
+        $r->print($data);
     }
 
     return 0;
