@@ -3,7 +3,11 @@
 
 @section v2_03_dev Changes with libapreq2-2.03-dev
 
-- C API [joes]
+- Perl API [joes]
+  Added $upload->slurp($data), which reads the contents of the file
+  upload "$upload" into the scalar "$data".
+
+- C API [joes, randyk]
   apreq_run_(hook|parser) are macros, so they are capitalized now.
   Fixed apreq_params_as_string() and added apreq_params_as_array().
   Reworked definitions of APREQ_DECLARE_HOOK, APREQ_DECLARE_PARSER 
